Working_examples/AWS_host_or_Killercoda/deployments-edg/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
  - port: 10000
    targetPort: 10000
    nodePort: 30080
