Working_examples/AWS_host_or_Killercoda/deployments-edg/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigw
  template:
    metadata:
      labels:
        app: apigw
    spec:
      containers:
      - name: curl-client
        image: curlimages/curl
        command: ["sleep", "3600"]
